# sudachi.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  fetch_dictionary.sh  index.html  indx.html  update_version.sh
.github/data/: expected-a.txt  expected-c.txt  expected-wakati-a.txt  input.txt
.github/workflows/: build-python-dev-linux.yml  build-python-wheels.yml  docs-deploy.yml  python-release.yml  python-upload-test.yml  python.yml  release-python-source.yml  rust.yml  (+2 more)
docs/: errors_and_security.md
plugin/path_rewrite/join_numeric/: Cargo.toml
plugin/path_rewrite/join_numeric/src/: lib.rs  numeric_parser.rs  tests.rs
plugin/path_rewrite/join_numeric/src/numeric_parser/: mod.rs  string_number.rs
python/: .buildinfo  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  build-sdist.sh  build-wheels-manylinux-pgo.sh  build_and_test.sh  genindex.html  index.html  latest_dev_version.py  objects.inv  py-modindex.html  search.html  searchindex.js  setup.py  subsetting.html  sudachi.dictionary.html  sudachi.html  sudachi.morpheme.html  sudachi.morphemelist.html  sudachi.tokenizer.html  sudachipy.dictionary.html  sudachipy.html  sudachipy.morpheme.html  sudachipy.morphemelist.html  sudachipy.tokenizer.html  wheels.html
python/_modules/: index.html
python/_modules/sudachi/: tokenizer.html
python/_modules/sudachipy/: config.html  tokenizer.html
python/_sources/: index.rst.txt  sudachi.morpheme.rst.txt  wheels.rst.txt
python/_sources/api/: sudachipy.rst.txt
python/_sources/topics/: out_param.rst.txt  subsetting.rst.txt
python/_static/: documentation_options.js
python/api/: sudachipy.dictionary.html  sudachipy.html  sudachipy.morpheme.html  sudachipy.morphemelist.html  sudachipy.tokenizer.html
python/docs/source/: conf.py  index.rst  subsetting.rst  sudachi.dictionary.rst  sudachi.morpheme.rst  sudachi.morphemelist.rst  sudachi.rst  sudachi.tokenizer.rst  sudachipy.dictionary.rst  sudachipy.morphemelist.rst  sudachipy.rst
python/docs/source/api/: sudachipy.morpheme.rst  sudachipy.tokenizer.rst
python/docs/source/topics/: wheels.rst
python/py_src/sudachi/: __init__.py  command_line.py  dictionary_path.py
python/py_src/sudachi/dictionary/: __init__.py
python/py_src/sudachi/morpheme/: __init__.py
python/py_src/sudachi/morphemelist/: __init__.py
python/py_src/sudachi/resources/: sudachi.json
python/py_src/sudachi/tokenizer/: __init__.py
python/py_src/sudachipy/: __init__.py  command_line.py  config.py  errors.py  sudachipy.pyi
python/py_src/sudachipy/dictionary/: __init__.py
python/py_src/sudachipy/morpheme/: __init__.py
python/py_src/sudachipy/morphemelist/: __init__.py
python/py_src/sudachipy/pretokenizer/: __init__.py
python/py_src/sudachipy/resources/: char.def  sudachi.json
python/py_src/sudachipy/tokenizer/: __init__.py
python/src/: build.rs  dictionary.rs  errors.rs  lib.rs  morpheme.rs  morpheme_list.rs  pos_matcher.rs  pretokenizer.rs  projection.rs  tokenizer.rs  word_info.rs
python/tests/: test_build.py  test_dictionary.py  test_import.py  test_morpheme.py  test_pos_matcher.py  test_pretokenizers.py  test_projection.py  test_tokenizer.py  test_word_info.py
python/tests/resources/: sudachi.json  test_config_template.json
python/topics/: out_param.html  subsetting.html  wheels.html
resources/: char.def  sudachi.json
rust/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
src/: config.rs  dic.rs  error.rs  input_text.rs  lattice.rs  lib.rs  main.rs  morpheme.rs  plugin.rs  sentence_detector.rs  tests.rs  tokenizer.rs  utf8inputtext.rs
sudachi/: Cargo.toml
sudachi-cli/: Cargo.toml
sudachi-cli/src/: analysis.rs  build.rs  main.rs  output.rs
sudachi-fuzz/: .gitignore  Cargo.toml  README.md
sudachi-fuzz/src/: main.rs
sudachi/src/: config.rs  error.rs  hash.rs  lib.rs  pos.rs  sentence_detector.rs  sentence_splitter.rs  stateless_tokeniser.rs  test.rs  tokenizer.rs
sudachi/src/analysis/: created.rs  inner.rs  lattice.rs  mlist.rs  mod.rs  morpheme.rs  morpheme_list.rs  node.rs  slattice.rs  stateful_tokenizer.rs  stateless_tokenizer.rs
sudachi/src/dic/: category_type.rs  character_category.rs  connect.rs  dictionary.rs  grammar.rs  header.rs  lexicon_set.rs  mod.rs  storage.rs  subset.rs  word_id.rs
sudachi/src/dic/lexicon/: mod.rs  trie.rs  word_id_table.rs  word_infos.rs  word_params.rs
sudachi/src/dic/read/: mod.rs  u16str.rs  word_info.rs
sudachi/src/input_text/: mod.rs  u8_text_tests.rs  utf8_input_text.rs  utf8_input_text_builder.rs
sudachi/src/input_text/buffer/: edit.rs  mod.rs  test_basic.rs  test_ported.rs
sudachi/src/input_text/input_buffer/: edit.rs  mod.rs  test_basic.rs  test_ported.rs
sudachi/src/plugin/: connect_cost.rs  dso.rs  input_text.rs  loader.rs  mod.rs  oov.rs  path_rewrite.rs
sudachi/src/plugin/connect_cost/: inhibit_connection.rs  mod.rs
sudachi/src/plugin/input_text/: mod.rs
sudachi/src/plugin/input_text/default_input_text/: mod.rs  tests.rs
sudachi/src/plugin/input_text/ignore_yomigana/: mod.rs  tests.rs
sudachi/src/plugin/input_text/prolonged_sound_mark/: mod.rs  tests.rs
sudachi/src/plugin/oov/: mod.rs
sudachi/src/plugin/oov/mecab_oov/: mod.rs  test.rs  tests.rs
sudachi/src/plugin/oov/regex_oov/: mod.rs  test.rs
sudachi/src/plugin/oov/simple_oov/: mod.rs
sudachi/src/plugin/path_rewrite/: mod.rs
sudachi/src/plugin/path_rewrite/join_katakana_oov/: mod.rs  tests.rs
sudachi/src/plugin/path_rewrite/join_numeric/: mod.rs  test.rs  test_char.def
sudachi/src/plugin/path_rewrite/join_numeric/numeric_parser/: mod.rs  string_number.rs
sudachi/src/util/: check_params.rs  cow_array.rs  fxhash.rs  mod.rs  testing.rs  user_pos.rs
sudachi/tests/: dictionary.rs  dictionary_header.rs  lexicon.rs  morpheme.rs  regex_oov.rs  sentence_detector.rs  split.rs  stateful_tokenizer.rs  stateless_tokenizer.rs
sudachi/tests/common/: mod.rs
sudachi/tests/resources/: sudachi.json  sudachi.oov.json  sudachi.regex.json
tests/: dictionary.rs  dictionary_header.rs  lexicon.rs  sentence_detector.rs  tokenizer.rs
(+406 files in other folders)
