[package]
name = "sudachi"
version = "0.1.0"
authors = ["Sorami Hisamoto <s@89.io>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
cfg-if = "0.1"
multiset = "0.0.5"
nom = "4.2.2"
regex = "1.5"
structopt = "0.2"
thiserror = "1.0"
unicode-normalization = "0.1.19"

[dev-dependencies]
lazy_static = "1.4.0"

[features]
# Compile dictionary into executable (specifying dictionary becomes optional)
bake_dictionary = []
