[package]
name = "sudachi"
version = "0.1.0"
authors = ["Sorami Hisamoto <s@89.io>"]
edition = "2018"
license = "Apache-2.0"

[workspace]
members = [
    "plugin/connect_cost/*",
    "plugin/input_text/*",
    "plugin/oov/*",
    "plugin/path_rewrite/*"
]

[dependencies]
cfg-if = "1.0.0"
libloading = "0.7"
multiset = "0.0.5"
nom = "4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3"

[features]
# Compile dictionary into executable (specifying dictionary becomes optional)
bake_dictionary = []
