[package]
name = "sudachipy"
version = "0.6.0"
edition = "2018"
description = "Python bindings of sudachi.rs, the Japanese Morphological Analyzer"
homepage = "https://github.com/WorksApplications/sudachi.rs"
repository = "https://github.com/WorksApplications/sudachi.rs"
license = "Apache-2.0"


[lib]
name = "sudachipy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14.3", features = ["extension-module"] }

[dependencies.sudachi]
path = "../sudachi"
