[package]
name = "sudachipy"
version = "0.6.6-a1"
edition = "2018"
description = "Python bindings of sudachi.rs, the Japanese Morphological Analyzer"
homepage = "https://github.com/WorksApplications/sudachi.rs"
repository = "https://github.com/WorksApplications/sudachi.rs"
license = "Apache-2.0"


[lib]
name = "sudachipy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16", features = ["extension-module"] }
thread_local = "1.1" # Apache 2.0/MIT

[dependencies.sudachi]
path = "../sudachi"
