[package]
name = "sudachipy"
version = "0.6.8-a1"
edition = "2018"
description = "Python bindings of sudachi.rs, the Japanese Morphological Analyzer"
homepage = "https://github.com/WorksApplications/sudachi.rs"
repository = "https://github.com/WorksApplications/sudachi.rs"
license = "Apache-2.0"


[lib]
name = "sudachipy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
thread_local = "1.1" # Apache 2.0/MIT
serde = { version = "1.0", features = ["derive"] } # MIT/Apache 2.0
serde_json = "1.0" # MIT/Apache 2.0

[dependencies.sudachi]
path = "../sudachi"
