[package]
name = "sudachi-cli"
version = "0.1.0"
authors = ["Works Applications <sudachi@worksap.co.jp>"]
edition = "2018"
description = "Rust version of Sudachi, the Japanese Morphological Analyzer"
readme = "README.md"
homepage = "https://github.com/WorksApplications/sudachi.rs"
repository = "https://github.com/WorksApplications/sudachi.rs"
license = "Apache-2.0"

[dependencies]
sudachi = { path = "../sudachi" }
structopt = "0.3"
cfg-if = "1.0.0"

join_numeric = { path = "../plugin/path_rewrite/join_numeric" }
join_katakana_oov = { path = "../plugin/path_rewrite/join_katakana_oov" }

[[bin]]
name = "sudachi"
path = "src/main.rs"

[features]
# Compile dictionary into executable (specifying dictionary becomes optional)
bake_dictionary = []