[package]
name = "sudachi-cli"
version = "0.6.6-a1"
authors = ["Works Applications <sudachi@worksap.co.jp>"]
edition = "2018"
description = "Rust version of Sudachi, the Japanese Morphological Analyzer"
readme = "README.md"
homepage = "https://github.com/WorksApplications/sudachi.rs"
repository = "https://github.com/WorksApplications/sudachi.rs"
license = "Apache-2.0"

[dependencies]
sudachi = { path = "../sudachi" }

cfg-if = "1.0.0" # MIT/Apache 2.0
memmap2 = "0.5" # MIT/Apache 2.0
structopt = "0.3" # MIT/Apache 2.0

[[bin]]
name = "sudachi"
path = "src/main.rs"

[features]
# Compile dictionary into executable (specifying dictionary becomes optional)
bake_dictionary = []