[package]
name = "sudachi"
version = "0.1.0"
authors = ["Works Applications <sudachi@worksap.co.jp>"]
edition = "2018"
description = "Rust version of Sudachi, the Japanese Morphological Analyzer"
readme = "README.md"
homepage = "https://github.com/WorksApplications/sudachi.rs"
repository = "https://github.com/WorksApplications/sudachi.rs"
license = "Apache-2.0"

[dependencies]
fancy-regex = "0.7"
lazy_static = "1.4.0"
libloading = "0.7"
multiset = "0.0.5"
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
memmap2 = "0.5"
unicode-normalization = "0.1.19"

[dev-dependencies]
tempfile = "3"

# Plugins for tests
default_input_text = { path = "../plugin/input_text/default_input_text" }
simple_oov = { path = "../plugin/oov/simple_oov" }
join_numeric = { path = "../plugin/path_rewrite/join_numeric" }
join_katakana_oov = { path = "../plugin/path_rewrite/join_katakana_oov" }

[lib]
crate-type = ["rlib"]